# lhp

./: LHP.sln  LICENSE  README.txt  docker-compose.yml
Backend/: Backend.csproj  Backend.sln  Dockerfile  Program.cs
Backend/Controllers/: AddressController.cs  DomainController.cs  IdentityController.cs  ImageController.cs  MachineController.cs  UserController.cs
Backend/Entities/: Domain.cs  Image.cs  Machine.cs  MachineAddress.cs  User.cs
Backend/Migrations/: 20230609130350_FirstMigration.Designer.cs  20230609130350_FirstMigration.cs  20230609175059_FirstMigration.Designer.cs  20230609175059_FirstMigration.cs  20230609182746_MachinesAndImages.Designer.cs  20230609182746_MachinesAndImages.cs  20230609183926_FirstMigration.Designer.cs  20230609183926_FirstMigration.cs  20230609192403_FirstMigration.Designer.cs  20230609192403_FirstMigration.cs  20230612115751_first.Designer.cs  20230612115751_first.cs  LHPDatabaseContextModelSnapshot.cs
Backend/Properties/: launchSettings.json
Backend/Requests/: CheckDomainRequest.cs  LoginRequest.cs  RegisterDomainRequest.cs  RegisterRequest.cs  UpdateDomainRequest.cs
Backend/Services/: DnsService.cs  DnsUpdater.cs  LHPDatabaseContext.cs
Backend/Utils/: CreateMachineRequest.cs  FromContextAttribute.cs  FromSecurityAttribute.cs  HttpContextUtils.cs  SecureRouteAttribute.cs  StringUtils.cs  UserModelBinderProvider.cs
PfSense/: PfDNSHostOverride.cs  PfResponse.cs  PfSenseClient.cs
client/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
client/src/: App.tsx  Globals.d.ts  (+3 more)
lhp-backend/: Cargo.toml
(+47 files in other folders)
